{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 113,
  "lineage": "1b323b97-ca0a-8f50-2044-5b1ff41b69fe",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:886072278420:security-group/sg-0978075bdb9919915",
            "description": "Security group for EKS cluster control plane communication with worker nodes",
            "egress": [],
            "id": "sg-0978075bdb9919915",
            "ingress": [],
            "name": "demo-cluster-eks-cluster-sg",
            "name_prefix": "",
            "owner_id": "886072278420",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "demo-cluster-eks-cluster-sg"
            },
            "tags_all": {
              "Name": "demo-cluster-eks-cluster-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07d22bc7bbaf36750"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_nodes_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:886072278420:security-group/sg-0657ae88d4e90a0bc",
            "description": "Security group for all nodes in the cluster",
            "egress": [],
            "id": "sg-0657ae88d4e90a0bc",
            "ingress": [],
            "name": "demo-cluster-eks-nodes-sg",
            "name_prefix": "",
            "owner_id": "886072278420",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "demo-cluster-eks-nodes-sg",
              "kubernetes.io/cluster/demo-cluster": "owned"
            },
            "tags_all": {
              "Name": "demo-cluster-eks-nodes-sg",
              "kubernetes.io/cluster/demo-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-07d22bc7bbaf36750"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "eks_cluster_egress_kublet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow control plane to node egress for kubelet",
            "from_port": 10250,
            "id": "sgrule-3278891656",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0978075bdb9919915",
            "security_group_rule_id": "sgr-09295a8a5a5ab36ab",
            "self": false,
            "source_security_group_id": "sg-0657ae88d4e90a0bc",
            "timeouts": null,
            "to_port": 10250,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.eks_cluster_sg",
            "module.eks.aws_security_group.eks_nodes_sg",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "eks_cluster_egress_nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow control plane to node egress for nginx",
            "from_port": 8443,
            "id": "sgrule-2028178968",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0978075bdb9919915",
            "security_group_rule_id": "sgr-006e627351db2cae6",
            "self": false,
            "source_security_group_id": "sg-0657ae88d4e90a0bc",
            "timeouts": null,
            "to_port": 8443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.eks_cluster_sg",
            "module.eks.aws_security_group.eks_nodes_sg",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "eks_cluster_ingress_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow inbound traffic from the worker nodes on the Kubernetes API endpoint port",
            "from_port": 443,
            "id": "sgrule-4293530651",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0978075bdb9919915",
            "security_group_rule_id": "sgr-002f4c73605b679bf",
            "self": false,
            "source_security_group_id": "sg-0657ae88d4e90a0bc",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.eks_cluster_sg",
            "module.eks.aws_security_group.eks_nodes_sg",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_node_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow outbound internet access",
            "from_port": 0,
            "id": "sgrule-1983141695",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0657ae88d4e90a0bc",
            "security_group_rule_id": "sgr-0ddb3c4e9096aa277",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.eks_nodes_sg",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_node_ingress_kublet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow control plane to node ingress for kubelet",
            "from_port": 10250,
            "id": "sgrule-368739345",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0657ae88d4e90a0bc",
            "security_group_rule_id": "sgr-002b96d374c2e1b02",
            "self": false,
            "source_security_group_id": "sg-0978075bdb9919915",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.eks_cluster_sg",
            "module.eks.aws_security_group.eks_nodes_sg",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_node_ingress_nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow control plane to node ingress for nginx",
            "from_port": 8443,
            "id": "sgrule-2990337820",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0657ae88d4e90a0bc",
            "security_group_rule_id": "sgr-00ca029183c618bf6",
            "self": false,
            "source_security_group_id": "sg-0978075bdb9919915",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.eks_cluster_sg",
            "module.eks.aws_security_group.eks_nodes_sg",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_node_to_worker_node_ingress_coredns_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow workers nodes to communicate with each other for coredns TCP",
            "from_port": 53,
            "id": "sgrule-770098609",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0657ae88d4e90a0bc",
            "security_group_rule_id": "sgr-0c2b2efd819b71b4d",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.eks_nodes_sg",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_node_to_worker_node_ingress_coredns_udp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow workers nodes to communicate with each other for coredns UDP",
            "from_port": 53,
            "id": "sgrule-2310628958",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-0657ae88d4e90a0bc",
            "security_group_rule_id": "sgr-015f8c7b8e2a6bb4d",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.eks_nodes_sg",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "worker_node_to_worker_node_ingress_ephemeral",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow workers nodes to communicate with each other on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-1099109018",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0657ae88d4e90a0bc",
            "security_group_rule_id": "sgr-04f10232d747fd42e",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.eks_nodes_sg",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:886072278420:security-group/sg-0efc36947cb5d0d14",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0efc36947cb5d0d14",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "886072278420",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "vpc_id": "vpc-07d22bc7bbaf36750"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06ba843eb5ed84c87",
            "arn": "arn:aws:ec2:us-east-1:886072278420:elastic-ip/eipalloc-06ba843eb5ed84c87",
            "domain": "vpc",
            "id": "eipalloc-06ba843eb5ed84c87",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-70-163-213.compute-1.amazonaws.com",
            "public_ip": "52.70.163.213",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:886072278420:internet-gateway/igw-0e08eb9741267d70e",
            "id": "igw-0e08eb9741267d70e",
            "owner_id": "886072278420",
            "tags": {
              "Name": "demo-cluster-vpc-internetgateway"
            },
            "tags_all": {
              "Name": "demo-cluster-vpc-internetgateway"
            },
            "vpc_id": "vpc-07d22bc7bbaf36750"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06ba843eb5ed84c87",
            "association_id": "eipassoc-0effed5261983be93",
            "connectivity_type": "public",
            "id": "nat-09ad00bfc74a23f04",
            "network_interface_id": "eni-0dea4db957b4a0bfc",
            "private_ip": "10.0.11.15",
            "public_ip": "52.70.163.213",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-001fdae5b3c985ac3",
            "tags": {
              "Name": "demo-cluster-vpc-natgateway-default"
            },
            "tags_all": {
              "Name": "demo-cluster-vpc-natgateway-default"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat_gateway",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b942808437ae06b91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-09ad00bfc74a23f04",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b942808437ae06b9",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat_gateway",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0e08eb9741267d70e",
            "id": "r-rtb-0350277195f9d37bd1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0350277195f9d37bd",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:886072278420:route-table/rtb-0b942808437ae06b9",
            "id": "rtb-0b942808437ae06b9",
            "owner_id": "886072278420",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "demo-cluster-vpc-routetable-private"
            },
            "tags_all": {
              "Name": "demo-cluster-vpc-routetable-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-07d22bc7bbaf36750"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:886072278420:route-table/rtb-0350277195f9d37bd",
            "id": "rtb-0350277195f9d37bd",
            "owner_id": "886072278420",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "demo-cluster-vpc-routetable-public"
            },
            "tags_all": {
              "Name": "demo-cluster-vpc-routetable-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-07d22bc7bbaf36750"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-097fd3339728474b5",
            "route_table_id": "rtb-0b942808437ae06b9",
            "subnet_id": "subnet-03c95019066bb60e7"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0339e92861c4ef62b",
            "route_table_id": "rtb-0b942808437ae06b9",
            "subnet_id": "subnet-01556dc53b231dedb"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0724c1268b649ff16",
            "route_table_id": "rtb-0b942808437ae06b9",
            "subnet_id": "subnet-0d1a3f4746f4aaa66"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b0b3c64e2101bac4",
            "route_table_id": "rtb-0350277195f9d37bd",
            "subnet_id": "subnet-001fdae5b3c985ac3"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cab9a1eb69a861de",
            "route_table_id": "rtb-0350277195f9d37bd",
            "subnet_id": "subnet-00bef4a336371ccaa"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06d5e704aab85bb55",
            "route_table_id": "rtb-0350277195f9d37bd",
            "subnet_id": "subnet-091bf1fe141c326c6"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:886072278420:subnet/subnet-03c95019066bb60e7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.48.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03c95019066bb60e7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "886072278420",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo-cluster-vpc-private-subnet-1",
              "kubernetes.io/cluster/demo-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "demo-cluster-vpc-private-subnet-1",
              "kubernetes.io/cluster/demo-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-07d22bc7bbaf36750"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:886072278420:subnet/subnet-01556dc53b231dedb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.64.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01556dc53b231dedb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "886072278420",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo-cluster-vpc-private-subnet-2",
              "kubernetes.io/cluster/demo-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "demo-cluster-vpc-private-subnet-2",
              "kubernetes.io/cluster/demo-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-07d22bc7bbaf36750"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:886072278420:subnet/subnet-0d1a3f4746f4aaa66",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.80.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d1a3f4746f4aaa66",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "886072278420",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo-cluster-vpc-private-subnet-3",
              "kubernetes.io/cluster/demo-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "demo-cluster-vpc-private-subnet-3",
              "kubernetes.io/cluster/demo-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-07d22bc7bbaf36750"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:886072278420:subnet/subnet-001fdae5b3c985ac3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-001fdae5b3c985ac3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "886072278420",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo-cluster-vpc-public-subnet-1",
              "kubernetes.io/cluster/demo-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "demo-cluster-vpc-public-subnet-1",
              "kubernetes.io/cluster/demo-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-07d22bc7bbaf36750"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:886072278420:subnet/subnet-00bef4a336371ccaa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00bef4a336371ccaa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "886072278420",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo-cluster-vpc-public-subnet-2",
              "kubernetes.io/cluster/demo-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "demo-cluster-vpc-public-subnet-2",
              "kubernetes.io/cluster/demo-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-07d22bc7bbaf36750"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:886072278420:subnet/subnet-091bf1fe141c326c6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-091bf1fe141c326c6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "886072278420",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo-cluster-vpc-public-subnet-3",
              "kubernetes.io/cluster/demo-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "demo-cluster-vpc-public-subnet-3",
              "kubernetes.io/cluster/demo-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-07d22bc7bbaf36750"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:886072278420:vpc/vpc-07d22bc7bbaf36750",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0cecfc7f2ecb45d58",
            "default_route_table_id": "rtb-030e87a51f435f267",
            "default_security_group_id": "sg-0efc36947cb5d0d14",
            "dhcp_options_id": "dopt-0c7d3fd484668ea43",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07d22bc7bbaf36750",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-030e87a51f435f267",
            "owner_id": "886072278420",
            "tags": {
              "Name": "demo-cluster-vpc"
            },
            "tags_all": {
              "Name": "demo-cluster-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}